# mailroom

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: automation.example.toml  mailroom.example.toml
docs/: README.md
docs/architecture/: repository-layout.md  system-overview.md
docs/decisions/: 0001-foundation.md  0002-gmail-auth-stack.md  0003-message-canonical-sync.md  0004-unified-thread-workflow.md  0005-attachment-canonical-model.md  0006-review-first-automation-rules.md  0007-verification-audit-hardening.md  0008-read-only-tui-foundation.md  0009-tui-workflow-actions.md  0010-tui-draft-cleanup-flows.md  0011-tui-automation-apply-rules.md
docs/operations/: attachment-catalog-and-export.md  automation-rules-and-bulk-actions.md  gmail-auth-and-account.md  local-config-and-store.md  mailbox-sync-and-search.md  plugin-assisted-workflows.md  security-and-storage.md  thread-workflow-and-cleanup.md  tui-operator-shell.md  verification-and-hardening.md
docs/roadmap/: v1-search-triage-draft-queue.md
docs/workflows/: inbox-triage.md
migrations/01-substrate/: up.sql
migrations/02-gmail-account-foundation/: down.sql  up.sql
migrations/03-mailbox-sync-search-foundation/: down.sql  up.sql
migrations/04-unified-thread-workflow/: down.sql  up.sql
migrations/05-workflow-version-cas/: down.sql  up.sql
migrations/06-attachment-catalog-export-foundation/: down.sql  up.sql
migrations/07-account-scoped-attachment-keys/: down.sql  up.sql
migrations/08-automation-rules-and-bulk-actions/: down.sql  up.sql
migrations/09-mailbox-full-sync-staging/: down.sql  up.sql
migrations/10-full-sync-checkpoints/: down.sql  up.sql
migrations/11-sync-pacing-state/: down.sql  up.sql
migrations/12-sync-pacing-state-hardening/: down.sql  up.sql
migrations/13-bounded-sync-pipeline/: down.sql  up.sql
migrations/14-sync-pipeline-telemetry-and-page-manifests/: down.sql  up.sql
migrations/15-sync-run-history/: down.sql  up.sql
migrations/16-sync-history-comparability/: down.sql  up.sql
src/: attachments.rs  audit.rs  cli.rs  cli_output.rs  config.rs  doctor.rs  lib.rs  mailbox.rs  main.rs  time.rs  tui.rs  workspace.rs
src/attachments/: error.rs  export.rs  mod.rs  reports.rs  service.rs  tests.rs  vault.rs
src/auth/: file_store.rs  flow.rs  mod.rs  oauth_client.rs  tests.rs
src/auth/oauth_client/: import.rs  mod.rs  (+5 more)
src/automation/: headers.rs  mod.rs  model.rs  output.rs  rules.rs  service.rs  suggestions.rs
src/cli_output/: errors.rs  human.rs  json.rs  mod.rs  tests.rs
src/gmail/: client.rs  constants.rs  http.rs  mod.rs  quota.rs  response.rs  types.rs
src/handlers/: account.rs  attachment.rs  audit.rs  auth.rs  automation.rs  config.rs  doctor.rs  gmail.rs  mod.rs  search.rs  store.rs  sync.rs  tui.rs  workflow.rs  workspace.rs
src/mailbox/: model.rs  output.rs  pacing.rs  pipeline.rs  search.rs  sync.rs  telemetry.rs  tests.rs  util.rs
src/store/: accounts.rs  connection.rs  doctor.rs  migrations.rs  mod.rs  tests.rs
src/workflows/: mod.rs  model.rs  output.rs  service.rs
(+54 files in other folders)
