[package]
name = "mailroom"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
blake3 = "1.8.4"
clap = { version = "4.5.39", features = ["derive", "wrap_help"] }
dialoguer = "0.12.0"
directories = "6.0.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
httpdate = "1.0.3"
include_dir = "0.7.4"
mail-builder = "0.4.4"
mime_guess = "2.0.5"
fs2 = "0.4.3"
oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest", "rustls-tls"] }
rand = "0.8.5"
reqwest = { version = "0.12.28", default-features = false, features = ["gzip", "json", "rustls-tls"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
rusqlite_migration = { version = "2.5.0", features = ["from-directory"] }
sanitize-filename = "0.7.0-beta"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
toml = "0.9.8"
url = "2.5.8"
webbrowser = "1.2.0"

[dev-dependencies]
tempfile = "3.23.0"
wiremock = "0.6.5"
